objects/Template__c/Template__c.object-meta.xml
<CustomObject>
    <label>Template (Import)</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>