objects/Template__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>250</length>
    <type>Text</type>
</CustomField>