objects/Template__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <length>20</length>
    <type>Text</type>
</CustomField>