objects/Template__c/fields/Sales_Order_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Type_Id__c</fullName>
    <label>Sales Order Type Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>